fix scrolling on mobile and add more styles

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -14,6 +14,8 @@ body
 #root
 	flex-grow 1
 	margin 2.5em
+	margin-left 8em
+	margin-right 8em
 
 #container
 	height 100%
@@ -302,3 +304,13 @@ div.hr
 	.thumb-container, .thumb
 		width 5em
 		height 5em
+
+@media (max-width: 360px)
+	.albums 
+		display flex
+		flex-direction column
+		justify-content center
+		width 100%
+		margin 0
+		padding 0
+
